k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: basicapp
  name: basicapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: basicapp
  template:
    metadata:
      annotations:
        version: v1.4
      labels:
        app: basicapp
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/pipelines-tutorial/basicapp:latest
          imagePullPolicy: Always
          name: basicapp
          livenessProbe:
            httpGet:
              path: /TestServletWebProject/TestServlet
              port: 9443
            initialDelaySeconds: 3
            periodSeconds: 3
          volumeMounts:
            - name: wsadmin-password
              mountPath: /tmp
              readOnly: true
          ports:
            - containerPort: 9080
              protocol: TCP
            - containerPort: 9443
              protocol: TCP
            - containerPort: 9043
              protocol: TCP
      volumes:
      - name: wsadmin-password
        secret:
          secretName: wsadmin-password
