k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: basicapp
  name: basicapp
spec:
  port:
    targetPort: port-9080
  to:
    kind: Service
    name: basicapp
    weight: 100
